applied spacing fixes to header and menu

--- a/css/index.css
+++ b/css/index.css
@@ -169,52 +169,54 @@ p {
 }
 header {
   display: flex;
-  justify-content: center;
-  justify-content: flex-start;
   position: fixed;
+  top: 0;
   height: 50px;
-  width: 1024px;
   background: #99A4AF;
   flex-direction: row;
-  z-index: 100;
-}
-@media ( max-width: 500px ) {
-  header {
-    width: 500px;
-  }
-}
-header h1 {
-  display: flex;
+  width: 100%;
   align-items: center;
-  font-size: 2.4rem;
+  z-index: 1;
+  justify-content: center;
+}
+header .header-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1024px;
+}
+header .header-content h1 {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 2.3rem;
   font-weight: bold;
-  width: 50%;
-  padding-left: 15px;
+  padding-left: 82px;
   color: white;
 }
-header nav {
+@media ( max-width: 500px ) {
+  header .header-content h1 {
+    padding-left: 15px;
+  }
+}
+header .header-content .menu {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 50%;
-  padding-right: 15px;
+  padding-right: 82px;
 }
-header nav .menu-button {
+@media ( max-width: 500px ) {
+  header .header-content .menu {
+    padding-right: 11px;
+  }
+}
+header .header-content .menu .menu-button {
   cursor: pointer;
   display: flex;
 }
-@media ( max-width: 500px ) {
-  header nav {
-    width: 14%;
-  }
-}
-.menu {
-  z-index: 2;
-}
 .menu .menu-content {
-  position: absolute;
-}
-.menu .menu-content {
+  z-index: 1;
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -222,29 +224,40 @@ header nav .menu-button {
   left: 0;
   width: 100%;
   height: 100%;
-  padding-top: 190px;
-  padding-left: 10px;
   background: #99A4AF;
   opacity: 0.9;
-  z-index: 1;
 }
-.menu .menu-content .menu-close {
-  position: absolute;
-  right: 529px;
-  top: 25px;
-  cursor: pointer;
-}
-.menu .menu-content a {
+.menu .menu-content .menu-header {
   display: flex;
-  font-size: 4.8rem;
+  justify-content: space-between;
   align-self: center;
-  width: 10%;
-  height: 12%;
-  text-decoration: none;
-  color: white;
-  text-emphasis: bold;
+  padding-top: 24px;
+  max-width: 1024px;
+  width: 100%;
 }
-.menu .menu-content a:hover {
+@media ( max-width: 500px ) {
+  .menu .menu-content .menu-header {
+    padding: 13px 15px 0 15px;
+  }
+}
+.menu .menu-content .menu-header .menu-close {
+  cursor: pointer;
+  padding-right: 82px;
+}
+.menu .menu-content nav {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 10rem;
+  margin: auto;
+}
+.menu .menu-content nav a {
+  font-size: 4.8rem;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+.menu .menu-content nav a:hover {
   color: #222222;
 }
 .menu .menu-hidden {
@@ -256,7 +269,7 @@ header nav .menu-button {
 }
 .home .cta {
   position: relative;
-  margin: 0;
+  margin-top: -50px;
   overflow: hidden;
 }
 @media ( max-width: 500px ) {
@@ -286,13 +299,17 @@ header nav .menu-button {
 @media ( max-width: 500px ) {
   .home .cta h2 {
     line-height: 4rem;
-    left: 15px;
-    bottom: 30px;
-    font-size: 3.6rem;
+    left: 13px;
+    bottom: 45px;
+    font-size: 3.5rem;
   }
 }
 .home .main-content {
+  display: flex;
+  justify-content: center;
+  align-content: center;
   margin: 50px 80px 0 80px;
+  flex-direction: column;
 }
 @media ( max-width: 500px ) {
   .home .main-content {
@@ -394,6 +411,7 @@ header nav .menu-button {
 @media ( max-width: 500px ) {
   .home .main-content .content-top .content-module .mobile-image {
     display: flex;
+    width: 100%;
   }
 }
 .home .main-content .content-top .content-module:nth-child(2) {
@@ -539,7 +557,7 @@ footer {
 footer h5 {
   font-size: 2rem;
   margin-bottom: 8px;
-  text-emphasis: bold;
+  font-weight: bold;
 }
 footer p {
   font-size: 1.4rem;
