--- a/less/home.less
+++ b/less/home.less
@@ -40,6 +40,7 @@
         .flex-center();
         align-content: center;
         margin: 50px 80px 0 80px;
+        flex-direction: column;
         @media @phone {
             .flex-center();
             flex-direction: column;
