--- a/less/menu.less
+++ b/less/menu.less
@@ -1,59 +1,48 @@
 .menu {
-    z-index: 2;
     .menu-content {
+        z-index: 1;
         position: fixed;
         display: flex;
         flex-direction: column;
         top: 0;
         left: 0;
-        width:100%;
+        width: 100%;
         height: 100%;
-        padding-left: 10px;
         background: @gray-chateau;
         opacity: .9;
-        z-index: 1;
-        justify-content: center;
-        @media @phone {
-            align-content: center;
-        }
         .menu-header {
-            .flex-center();
-            padding: 0;
-            width: 100%;
-            justify-content: ;
-        }
-        .menu-close {
-            right:529px;
-            top: 25px;
-            cursor: pointer;
-            @media @phone {
-                top: 20px;
-                right: 20px;
-            }
-        }
-        a {
-            font-size: 4.8rem;
+            display: flex;
+            justify-content: space-between;
             align-self: center;
-            width: 10%;
-            height: 12%;
-            text-decoration: none;
-            color: @menu-text-color;
-            font-weight: bold;
+            padding-top: 24px;
+            max-width: 1024px;
+            width: 100%;
             @media @phone {
-                width: 50%;
+                padding: 13px 15px 0 15px;
+            }
+            .menu-close {
+                cursor: pointer;
+                padding-right: 82px;
             }
         }
-        a:hover {
-            color: #222222;
+        nav {
+            .flex-center();
+            flex-direction: column;
+            line-height: 10rem;
+            margin: auto;
+            a {
+                font-size: 4.8rem;
+                color: @menu-text-color;
+                font-weight: bold;
+                text-decoration: none;
+            }
+            a:hover {
+                color: #222222;
+            }
         }
+        
     }
     .menu-hidden {
         display: none;
     }
-  }
-  
-  
-  
-  
-  
-  
+}
